--- a/client/app/gleam.toml
+++ b/client/app/gleam.toml
@@ -18,6 +18,7 @@ lustre = ">= 5.2.1 and < 6.0.0"
 rsvp = ">= 1.1.3 and < 2.0.0"
 gleam_json = ">= 3.0.2 and < 4.0.0"
 plinth = ">= 0.7.2 and < 1.0.0"
+gleam_javascript = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.6.1 and < 2.0.0"
