--- a/client/app/gleam.toml
+++ b/client/app/gleam.toml
@@ -1,4 +1,4 @@
-name = "study_app"
+name = "app"
 version = "1.0.0"
 target = "javascript"
 # Fill out these fields if you intend to generate HTML documentation or publish
